[package]
name = "putfilebot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "rustls"] } 
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls", "stream"] }
log = "0.4"
pretty_env_logger = "0.5"
dotenv = "0.15"
std_prelude = "*"
anyhow = "1.0"
